<resources>
    <string name="app_name">Practica 1 Nick Cave Discografia</string>
    <string name="nomDisc">Nombre del disco</string>
    <string name="fechaDisco">Fecha</string>
    <string name="album">album</string>
    <string name="prod">Production</string>
    <string name="musicians">Musicians</string>
    <string name="label">Label</string>
    <string name="long_des">Long Description</string>
    <string name="error">No se obtuvieron datos, vuelva a intentarlo</string>
    <string name="sing">Iniciar Sesión</string>
    <string name="e_mail">E-MAIL</string>
    <string name="pass">Password</string>
    <string name="no_email">Introduzca un usuario</string>
    <string name="no_pass">Se requiere una contraseña o la contraseña no tiene por lo menos 6 caracteres</string>
    <string name="reg">"¿Aún no tienes Usuario? "</string>
    <string name="miss_pass">¿Olvidaste tu contraseña?</string>
    <string name="b_miss_pass">Recupérala aquí</string>
    <string name="b_reg">Regístrate</string>
    <string name="ERROR_ACCOUNT_EXISTS_WITH_DIFFERENT_CREDENTIAL">Error: Una cuenta ya existe con el mismo correo, pero con diferentes datos de ingreso</string>
    <string name="ERROR_INVALID_EMAIL">El correo electrónico no tiene un formato correcto</string>
    <string name="ERROR_WRONG_PASSWORD">Error: La contraseña no es válida</string>
    <string name="ERROR_EMAIL_ALREADY_IN_USE">Error: el correo electrónico ya está en uso con otra cuenta.</string>
    <string name="ERROR_USER_TOKEN_EXPIRED">Error: La sesión ha expirado. Favor de ingresar nuevamente.</string>
    <string name="ERROR_USER_NOT_FOUND">Error: No existe el usuario con la información proporcionada.</string>
    <string name="ERROR_WEAK_PASSWORD">La contraseña porporcionada es inválida</string>
    <string name="NO_NETWORK">Red no disponible o se interrumpió la conexión</string>
    <string name="NO_ANY_AUTH">Error. No se pudo autenticar exitosamente.</string>
    <string name="MAIL_ENV_CONF">El correo de verificación ha sido enviado</string>
    <string name="NO_MAIL_ENV_CONF">No se pudo enviar el correo de verificación</string>
    <string name="CORRECT_USER">USUARIO CREADO</string>
    <string name="RES_PASS">Restablecer contraseña</string>
    <string name="ING_MAIL">Ingrese su correo para recibir el enlace para restablecer</string>
    <string name="BTN_ENV">Enviar</string>
    <string name="ENV_MAIL">El enlace para restablecer la contraseña ha sido enviado a su correo</string>
    <string name="NO_ENV_MAIL">El enlace no se ha podido enviar: ${it.message}</string>
    <string name="NO_MAIL">Favor de ingresar la dirección de correo</string>
    <string name="CANCEL">Cancelar</string>
    <string name="welcome">"Bienvenido: "</string>
    <string name="img">iagen ref</string>
    <string name="map_desc">Recorded at:</string>
    <string name="TITLE">Recorded at:</string>
    <string name="ler">disco</string>
    <string name="maps">Grabado en:</string>
    <string name="date">Año de lanzamiento</string>
    <string name="prods">Productor(es):</string>
    <string name="mus">Músicos:</string>
    <string name="lbl">Disquera:</string>
    <string name="info">"Más información "</string>
</resources>