<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primario"
    tools:context=".view.activities.DetailAlbumActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvAlbum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/average"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    tools:text="Title" />

                <ImageView
                    android:id="@+id/ivCover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marTV"
                    tools:src="@drawable/ic_baseline_album_24" />
                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/average"
                    android:padding="@dimen/marCover"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:text="@string/date" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/average"
                    android:padding="@dimen/marTV"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:text="@string/fechaDisco" />
                <TextView
                    android:id="@+id/prod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/average"
                    android:padding="@dimen/marCover"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:text="@string/prods" />
                <TextView
                    android:id="@+id/tvProd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/average"
                    android:padding="@dimen/marTV"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    tools:text="@string/prod" />
                <TextView
                    android:id="@+id/musc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/average"
                    android:padding="@dimen/marCover"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:text="@string/mus" />
                <TextView
                    android:id="@+id/tvMus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/average"
                    android:padding="@dimen/marTV"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="@string/musicians" />
                <TextView
                    android:id="@+id/lbl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/average"
                    android:padding="@dimen/marCover"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:text="@string/lbl" />
                <TextView
                    android:id="@+id/tvLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/average"
                    android:padding="@dimen/marTV"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="@string/label" />
                <TextView
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/average"
                    android:padding="@dimen/marCover"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:text="@string/info" />
                <TextView
                    android:id="@+id/tvlongDes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/average"
                    android:padding="@dimen/marTV"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="@string/long_des" />
                <TextView
                    android:id="@+id/maps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/average"
                    android:padding="@dimen/marCover"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="@string/maps" />


                    <androidx.fragment.app.FragmentContainerView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:id="@+id/map"
                        >

                    </androidx.fragment.app.FragmentContainerView>




            </LinearLayout>



        </ScrollView>

        <ProgressBar
            android:id="@+id/pbConexion"
            style="?android:attr/progressBarStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/cuarto"/>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>